--- a/views/navigation.html
+++ b/views/navigation.html
@@ -6,7 +6,7 @@
         <ul class="nav nav-pills font mainmenu" ng-class="ishome" >
            
             <li>
-                <a href="#/home">New In</a>
+                <a href="#/category/31">New In</a>
                 
             </li>
             <!--li ng-mouseover="showsub(5)" ng-mouseleave="hidesub(5)" style="position:relative;">
