--- a/views/product.html
+++ b/views/product.html
@@ -37,7 +37,7 @@
 
             </div>
         </div>
-         <span class="pronew2"><img src="img/new.png"></span>
+         <span class="pronew2" ng-show="product.isnew=='1'"><img src="img/new.png"></span>
         <span ng-repeat="image in productimage">
                
                 <!--<div ><img src="img/product/pro11.jpg" class="imgback wow fadeInLeft" ></div>
