--- a/views/slider.html
+++ b/views/slider.html
@@ -25,25 +25,37 @@
 
 
 <style>
-    .imageset {
-        width: 1020px;
-        margin: auto;
-        border: 10px solid #f7f7f7;
-        height: 270px;
-        position: relative;
-    }
-    .toggle {
-        position: absolute;
-        top: 100px;
-    }
-    .toggle.left {
-        left: -30px;
-    }
-    .toggle.right {
-        right: -30px;
-    }
 </style>
 
+
+
+
+<div class="productset ng-scope">
+    <img src="img/pick.png" alt="" style="margin: 20px auto 0;display: block;">
+    <div class="imageset">
+        <a ng-click="slidesetprev(showslideset1);">
+            <div class="toggle left">
+                <img src="img/leftbanner.png" alt="" ng-show="showslideset1==1">
+            </div>
+        </a>
+        <a ng-click="slidesetnext(showslideset1);">
+            <div class="toggle right">
+                <img src="img/rightbanner.png" alt="" ng-show="showslideset1==0">
+            </div>
+        </a>
+        <div style="overflow:hidden;">
+            <span ng-repeat="slider in sliders">
+                <span ng-show="$index<5">
+                    <a href="#/product/{{slider.link}}"><img src="{{slider.image|imagepath}}" class="slideset1 animated slideInLeft" ng-show="showslideset1==0"></a>
+                </span>
+                <span ng-show="$index>=5">
+                    <a href="#/product/{{slider.link}}"><img src="{{slider.image|imagepath}}" class="slideset1 animated slideInRight" ng-show="showslideset1==1"></a>
+                </span>
+            </span>
+        </div>
+    </div>
+
+</div>
 <div class="productset">
     <img src="img/butterfly.png" alt="" class="butterfly">
 
