--- a/views/category.html
+++ b/views/category.html
@@ -32,7 +32,7 @@
 
         <div class="col-md-3 text-center" ng-repeat="product in productlist"  my-repeat-directive>
             <div class="product wow fadeInLeft" data-wow-delay="0.6s" data-wow-duration="1s" data-wow-offset="10" style="visibility:none;">
-                <span class="pronew"><img src="img/new.png"></span>
+                <span ng-show="product.isnew=='1'" class="pronew"><img src="img/new.png"></span>
                    <a href="#/product/{{product.id}}">
                     <div class="img1">
                         <img src="{{product.productimage[0].image|imagepath}}" class="img">
