--- a/views/product.html
+++ b/views/product.html
@@ -30,7 +30,9 @@
                     <label class="hidden">Qty :</label>
                     <input type="text" value="1" class="hidden quantitybox" ng-model="addquantity">
                     <a class="btn btn-primary " ng-click="addtocart(product.id,product.name,rate,addquantity)"><span class="glyphicon  glyphicon-shopping-cart"></span> Add to Cart</a>  <a href="" ng-click="addwishlist(id)"><span ng-show="{{wish}}" class="glyphicon glyphicon-heart prowish"></span><span style="color:rgb(39, 240, 232);" ng-hide="{{wish}}" class="glyphicon glyphicon-heart prowish"></span></a>
-
+                    
+                    <div ng-show="wishlistlogin" class="alert alert-warning" style="margin:20px 0;">Please Login for Wishlist</div>
+                    <div ng-show="wishlistadded" class="alert alert-success" style="margin:20px 0;">Added to Wishlist</div>
                     <div ng-show="addedtocart=='show'" class="alert alert-success" style="margin:20px 0;">Added to Cart</div>
                 </div>
 
