--- a/views/cart.html
+++ b/views/cart.html
@@ -43,7 +43,7 @@
 
             <h3>Discount Codes</h3>
             <p>
-                <input type="text" placeholder="Enter your coupon code" ng-model="couponcode" class="form-control newsletteremail " style="margin-right:5px;"><a class="btn btn-primary {{'valid'+validcouponcode}}" ng-click="checkcoupon(couponcode)"><span ng-hide="validcouponcode==1">Apply Coupon</span> <span ng-show="validcouponcode==1">Coupon Code Applied</span></a>
+                <input type="text" placeholder="Enter your coupon code" ng-model="couponcode" class="discountcoupon form-control newsletteremail " style="margin-right:5px;"><a class="btn btn-primary {{'valid'+validcouponcode}}" ng-click="checkcoupon(couponcode)"><span ng-hide="validcouponcode==1">Apply Coupon</span> <span ng-show="validcouponcode==1">Coupon Code Applied</span></a>
 
                 <a href="#/checkout" class="btn btn-primary pull-right">Proceed to checkout</a>
             </p>
