--- a/views/checkout.html
+++ b/views/checkout.html
@@ -745,7 +745,7 @@
                                     <button id="customButton" class="stripe-button-el" ng-click="StipePaymentGen(subtotal+form.shippingcost-discountamount)"><span>Pay with Card</span></button>
                                 </div>
                                 <div class="col-xs-3">
-                                    <script src="lib/js/paypal-button.min.js?merchant=rajan@ispirare-acc.co.uk"
+                                    <script src="lib/js/paypal-button.min.js?merchant=lyla@lylaloves.co.uk"
                                             data-button="buynow"
                                             data-name="Lyla Loves"
                                             data-amount="{{subtotal+form.shippingcost-discountamount}}.00"
