--- a/views/slider.html
+++ b/views/slider.html
@@ -1,4 +1,4 @@
-<div ng-controller="slider">
+<!--<div ng-controller="slider">
     <div>
         <div class="" style="position:relative;">
             <img src="img/banner.jpg" class="bigimg" alt="">
@@ -20,12 +20,9 @@
         </div>
 
     </div>
-</div>
+</div>-->
 
 
-
-<style>
-</style>
 
 
 
