--- a/views/navigationhome.html
+++ b/views/navigationhome.html
@@ -31,7 +31,7 @@
 </div>
 </li-->
                 <li>
-                    <a href="#/lylaloves">lyla loves...</a>
+                    <a class="" href="#/lylaloves">lyla loves...</a>
 
                 </li>
 
