--- a/views/footer.html
+++ b/views/footer.html
@@ -1,6 +1,6 @@
 <div class="clearfix"></div>
            <div class="footer">
-            <div class="newsletter  fadeInDown" ng-class="firstloadclass"  data-wow-delay="0.6s">
+            <div class="newsletter  fadeInDown {{bottommenu}}" ng-class="firstloadclass"  data-wow-delay="0.6s">
                 <div class="row">
                     <div class="col-xs-4">
                         <div class="text-center fotternav"><a href="#returns" ng-class="returnsactive">RETURNS</a> &nbsp;&nbsp;&nbsp;| &nbsp;&nbsp;&nbsp;<a href="#delivery" ng-class="deliveryactive">DELIVERY</a></div>
