changes in google and footer
changes in google and footer

--- a/views/footer.html
+++ b/views/footer.html
@@ -10,7 +10,8 @@
                         </div>
                     </div>
                     <div class="col-xs-6">
-<!--
+					<span style="position:absolute;right:270px;">Worldwide Shipping<span>
+<!--	
                         <div class="text-center">Sign up for our newsletter! &nbsp;&nbsp;&nbsp;
                             <input type="email" class="form-control newsletteremail" ng-model="uemail" placeholder=""> <a class="btn btn-primary" ng-click="newsletter(uemail)">Subscribe</a>
                         </div>
