--- a/views/header.html
+++ b/views/header.html
@@ -96,6 +96,9 @@
                 <a href="https://www.tumblr.com/blog/lylalovesblog" target="_blank">
                     <img src="img/tumbler.png" class="socialicons">
                 </a>
+				<a href="https://www.tumblr.com/blog/lylalovesblog" target="_blank">
+                    <img src="img/googleplus.png" class="socialicons">
+                </a>
             </center>
 
 
