--- a/views/slider.html
+++ b/views/slider.html
@@ -46,7 +46,7 @@
                     <a href="#/product/{{slider.link}}"><img src="{{slider.image|imagepath}}" class="slideset1 animated slideInLeft" ng-show="showslideset1==0"></a>
                     <div class="proprice proprice2">
                         <a href="#/product/{{product.id}}">
-                            <h5>£ {{slider.price}}</h5>
+                            <h5> {{slider.price|convertprice}}</h5>
                         </a>
                     </div>
                 </span>
@@ -54,7 +54,7 @@
                     <a href="#/product/{{slider.link}}"><img src="{{slider.image|imagepath}}" class="slideset1 animated slideInRight" ng-show="showslideset1==1"></a>
                 <div class="proprice proprice2">
                     <a href="#/product/{{product.id}}">
-                        <h5>£ {{slider.price}}</h5>
+                        <h5> {{slider.price|convertprice}}</h5>
                     </a>
                 </div>
                 </span>
