--- a/views/checkout.html
+++ b/views/checkout.html
@@ -788,11 +788,11 @@
                                 <tbody>
                                     <tr ng-repeat="singlecart in cart">
                                         <td>{{singlecart.name}}</td>
-                                        <td>£ {{singlecart.price}}</td>
+                                        <td> {{singlecart.price|convertprice}}</td>
                                         <td>
                                             {{singlecart.qty}}
                                         </td>
-                                        <td>£ {{singlecart.subtotal}}</td>
+                                        <td> {{singlecart.subtotal|convertprice}}</td>
 
                                     </tr>
 
@@ -811,10 +811,10 @@
                                             <th>Grand Total</th>
                                         </tr>
                                         <tr>
-                                            <td>£ {{subtotal}}</td>
-                                            <td>£ {{discountamount}}</td>
-                                            <td ng-show="form.shippingcost!=0">£ {{form.shippingcost}}</td>
-                                            <td>£ {{subtotal+form.shippingcost-discountamount}}</td>
+                                            <td>{{subtotal|convertprice}}</td>
+                                            <td>{{discountamount|convertprice}}</td>
+                                            <td ng-show="form.shippingcost!=0">{{form.shippingcost|convertprice}}</td>
+                                            <td>{{subtotal+form.shippingcost-discountamount|convertprice}}</td>
                                         </tr>
                                     </table>
                                 </div>
