--- a/views/category.html
+++ b/views/category.html
@@ -37,7 +37,7 @@
                             <img src="{{product.productimage[0].image|imagepath}}" class="img">
                         </div>
 
-                        <div class="img2">
+                        <div class="img2" ng-show="product.productimage[1].image">
                             <img src="{{product.productimage[1].image|imagepath}}" class="img">
                         </div>
                     </a>
