--- a/views/header.html
+++ b/views/header.html
@@ -1,7 +1,7 @@
 <!--div class="header">
     <div class="row">
         <div class="col-xs-3">
-            <div ng-class="firstloadclass" class="logo fadeInRight">
+            <div myfirstloadclass class="logo fadeInRight">
                 <a href="#/home" class="pulseanimation">
                     <img src="img/logo.jpg" />
                 </a>
@@ -11,7 +11,7 @@
             <input type="email" class="form-control newsletteremail" ng-model="uemail" placeholder="Email"> <a class="btn btn-primary" ng-click="newsletter(uemail)">Subscribe</a>
         </div>
         <div class="col-xs-4">
-            <div ng-class="firstloadclass" class="headerright fadeInRight">
+            <div myfirstloadclass class="headerright fadeInRight">
                 <div class="row">
                     <div class="col-xs-6">
                     <!--a href="#/login" class="pulseanimation"><span class="glyphicon glyphicon-user"></span>&nbsp; {{heademail}}</a-> 
@@ -72,7 +72,7 @@
 
     <div class="row">
         <div class="col-xs-3">
-            <div ng-class="firstloadclass" class="logo fadeInRight">
+            <div myfirstloadclass class="logo fadeInRight">
                 <a href="#/home" class="" ng-class="ishome" id="totop">
                     <img src="img/logo.jpg" />
                 </a>
@@ -96,9 +96,11 @@
                 <a href="https://www.tumblr.com/blog/lylalovesblog" target="_blank">
                     <img src="img/tumbler.png" class="socialicons">
                 </a>
+<!--
 				<a href="https://www.tumblr.com/blog/lylalovesblog" target="_blank">
                     <img src="img/googleplus.png" class="socialicons">
                 </a>
+-->
             </center>
 
 
@@ -111,7 +113,7 @@
                     </div>
         </div-->
         <div class="col-xs-3">
-            <div ng-class="firstloadclass" class="headerright fadeInRight">
+            <div myfirstloadclass class="headerright fadeInRight">
                 <a href="#/home" class="" ng-class="ishome">
                     <img src="img/butterfly.png" alt="" class="butterfly-top">
                 </a>
