--- a/views/slider.html
+++ b/views/slider.html
@@ -1,33 +1,10 @@
-<!--<div ng-controller="slider">
-    <div>
-        <div class="" style="position:relative;">
-            <img src="img/banner.jpg" class="bigimg" alt="">
+<div class="productset">
+    <img src="img/3for2.jpg" alt="" class="butterfly" style="width: 60%;height: auto;">
 
 
-            <div class="home-form">
-                <p>
-                    <input type="text" class="inputhome" ng-model="limited.name" placeholder="NAME">
-                </p>
-                <p>
-                    <input type="email" class="inputhome" ng-model="limited.email" placeholder="EMAIL">
-                </p>
-                <p>
-                    <input type="text" class="inputhome" ng-model="limited.address" placeholder="ADDRESS">
-                    <a class="btn btn-primary btn-go" ng-click="placelimited(limited)">Go</a>
-                </p>
+</div>
 
-            </div>
-        </div>
-
-    </div>
-</div>-->
-
-
-
-
-
-
-<div class="productset ng-scope">
+<div class="productset">
     <img src="img/pick.png" alt="" style="margin: 20px auto 0;display: block;">
     <div class="imageset">
         <a ng-click="slidesetprev(showslideset1);">
