--- a/lib/css/main1.css
+++ b/lib/css/main1.css
@@ -167,6 +167,7 @@ input:focus {
     /* margin: 65px 0 0 180px; */
     margin: 10px;
     border: 0px;
+    left: 170px;
 }
 .content {
     margin-bottom: 30px;
@@ -656,11 +657,16 @@ li.homeclass {
     opacity: 0;
     padding: 0px;
     -webkit-transition: all 0.5s;
+    position: relative;
+    right: 100px;
 }
 .headsearch .inputbox.showit {
     width: 100%;
     opacity: 1;
     padding: 10px;
+    position: relative;
+    right: 178px;
+    top: 0px;
 }
 .headsearch .icon {
     background: transparent;
@@ -821,4 +827,16 @@ span.cartspace {
     outline: 0;
     -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px #03e1e4;
     box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px #03e1e4;
+}
+.glyphicon {
+position: relative;
+top: 1px;
+display: inline-block;
+font-family: 'Glyphicons Halflings';
+font-style: normal;
+font-weight: normal;
+line-height: 1;
+-webkit-font-smoothing: antialiased;
+-moz-osx-font-smoothing: grayscale;
+color: #898989;
 }
