--- a/lib/css/main1.css
+++ b/lib/css/main1.css
@@ -111,7 +111,7 @@ input:focus {
     width: 100%;
 }
 .newsletter.fixed {
-    position:fixed;
+    position: fixed;
 }
 .newsletter .form-control {
     border: none;
@@ -167,7 +167,7 @@ input:focus {
     /* margin: 65px 0 0 180px; */
     margin: 10px;
     border: 0px;
-    left: 170px;
+    right: -15px;
 }
 .content {
     margin-bottom: 30px;
@@ -252,6 +252,8 @@ input:focus {
     margin-bottom: 10px;
 }
 .zoomLens {
+    -webkit-box-shadow: rgb(206, 206, 206) 1px 0px 5px 2px;
+    -moz-box-shadow: rgb(206, 206, 206) 1px 0px 5px 2px;
     box-shadow: rgb(206, 206, 206) 1px 0px 5px 2px;
     border: 0px !important;
 }
@@ -279,6 +281,8 @@ input:focus {
     color: #a8a8a8;
 }
 .billing .panel-group .panel {
+    -webkit-border-radius: 0px;
+    -moz-border-radius: 0px;
     border-radius: 0px;
     border-color: transparent;
 }
@@ -359,7 +363,12 @@ ul.submenudown li {
     background-color: #FFABD3;
     margin-left: 9px;
     -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
     transform: rotate(45deg);
+    -webkit-border-radius: 0px;
+    -moz-border-radius: 0px;
     border-radius: 0px;
 }
 .carousel-indicators li {
@@ -369,13 +378,20 @@ ul.submenudown li {
     background-color: rgba(255, 255, 255, 0.6);
     margin-left: 9px;
     -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
     transform: rotate(45deg);
+    -webkit-border-radius: 0px;
+    -moz-border-radius: 0px;
     border-radius: 0px;
 }
 .productdetails {
     position: fixed;
     right: 10px;
     background: rgba(253, 253, 253, 0.8);
+    -webkit-border-radius: 2px;
+    -moz-border-radius: 2px;
     border-radius: 2px;
     padding: 0 10px;
     z-index: 1;
@@ -565,6 +581,9 @@ h5.pricecolor {
 }
 .bgimg {
     background: url('../../img/banner.jpg');
+    -webkit-background-size: 100% 100%;
+    -moz-background-size: 100%;
+    -o-background-size: 100%;
     background-size: 100%;
     height: 578px;
     background-repeat: no-repeat;
@@ -665,7 +684,7 @@ li.homeclass {
     opacity: 1;
     padding: 10px;
     position: relative;
-    right: 178px;
+    right: 160px;
     top: 0px;
 }
 .headsearch .icon {
@@ -751,6 +770,8 @@ div.megamenu.megamenu2 {
     bottom: 10px;
     right: 10px;
     outline: 0px;
+    -webkit-border-radius: 100%;
+    -moz-border-radius: 100%;
     border-radius: 100%;
     font-size: 18px;
     padding: 15px;
@@ -777,6 +798,8 @@ div.megamenu.megamenu2 {
 }
 .carticon {
     font-size: 25px;
+    -webkit-border-radius: 100%;
+    -moz-border-radius: 100%;
     border-radius: 100%;
     width: 25px;
     height: 25px;
@@ -825,18 +848,19 @@ span.cartspace {
 .discountcoupon {
     border-color: #03e1e4;
     outline: 0;
-    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px #03e1e4;
-    box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px #03e1e4;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px #03e1e4;
+    -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px #03e1e4;
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px #03e1e4;
 }
 .glyphicon {
-position: relative;
-top: 1px;
-display: inline-block;
-font-family: 'Glyphicons Halflings';
-font-style: normal;
-font-weight: normal;
-line-height: 1;
--webkit-font-smoothing: antialiased;
--moz-osx-font-smoothing: grayscale;
-color: #898989;
+    position: relative;
+    top: 1px;
+    display: inline-block;
+    font-family: 'Glyphicons Halflings';
+    font-style: normal;
+    font-weight: normal;
+    line-height: 1;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    color: #898989;
 }
