Accessories tab is active

--- a/views/accessoriessubmenu.html
+++ b/views/accessoriessubmenu.html
@@ -1,32 +1,24 @@
 <div class="submenu">
     <div class="row">
-        <div class="col-md-4">
-            <img src="img/accessories.jpg" class="img img-pad" alt="">
-        </div>
-        <div class="col-md-4">
-            <h3>Accessories</h3>
-            <ul class="submenudown">
-                <li>
-                    <a>Bag</a>
-                </li>
-                <li>
-                    <a>Scarves</a>
-                </li>
-               
-            </ul>
-        </div>
-        <div class="col-md-4">
-            <h3>Articles</h3>
-            <ul class="submenudown">
-                <li>
-                    <a>Bag</a>
-                </li>
-                <li>
-                    <a>Scarves</a>
-                </li>
 
+        <div class="col-xs-12">
+
+            <ul class="submenudown">
+                <li>
+                    <a href="#/category/7">Bags</a>
+                </li>
+                <li>
+                    <a href="#/category/8">Scarves</a>
+                </li>
+                <li>
+                    <a href="#/category/34">Hair</a>
+                </li>
+                <li>
+                    <a href="#/category/35">Phone Cases</a>
+                </li>
             </ul>
         </div>
+
     </div>
 
 </div>
