--- a/views/navigation.html
+++ b/views/navigation.html
@@ -20,16 +20,18 @@
                 <div class="megamenu megamenu2" ng-include src="submenuval[0]" ng-show="submenu[0]">
                 </div>
             </li>
-            <!--li ng-mouseover="showsub(1)" ng-mouseleave="hidesub(1)">
-                <a href="#/home">ACCESSORIES</a>
-                <div class="megamenu" ng-include src="submenuval[1]" ng-show="submenu[1]">
+            <li ng-mouseover="showsub(1)" ng-mouseleave="hidesub(1)" style="position:relative;">
+                <a href="#/category/6">Accesories</a>
+                <div class="megamenu megamenu2" ng-include src="submenuval[1]" ng-show="submenu[1]">
                 </div>
             </li>
+<!--
             <li ng-mouseover="showsub(2)" ng-mouseleave="hidesub(2)">
                 <a href="#/lookbook">LOOKBOOK</a>
                 <div class="megamenu" ng-include src="submenuval[2]" ng-show="submenu[2]">
                 </div>
-            </li-->
+            </li>
+-->
             <li>
                 <a href="#/lylaloves">lyla loves...</a>
                 
