--- a/views/navigationhome.html
+++ b/views/navigationhome.html
@@ -1,9 +1,7 @@
-
-
 <div ng-controller="navigationctrl">
-    <div class="navigation fadeInDown" skrollr class="row marginer"  data-0="opacity:1;margin-top:0px;margin-bottom:0px;" data-500="opacity:0;margin-top:500px;margin-bottom:-500px;" >
+    <div class="navigation fadeInDown" skrollr class="row marginer" data-0="opacity:1;margin-top:0px;margin-bottom:0px;" data-500="opacity:0;margin-top:500px;margin-bottom:-500px;">
         <center>
-            <ul class="nav nav-pills font mainmenu" ng-class="ishome" >
+            <ul class="nav nav-pills font mainmenu" ng-class="ishome">
 
                 <li>
                     <a href="#/category/31">New In</a>
@@ -20,12 +18,13 @@
                     <div class="megamenu megamenu2" ng-include src="submenuval[0]" ng-show="submenu[0]">
                     </div>
                 </li>
-                <!--li ng-mouseover="showsub(1)" ng-mouseleave="hidesub(1)">
-<a href="#/home">ACCESSORIES</a>
-<div class="megamenu" ng-include src="submenuval[1]" ng-show="submenu[1]">
-</div>
-</li>
-<li ng-mouseover="showsub(2)" ng-mouseleave="hidesub(2)">
+                
+                <li ng-mouseover="showsub(1)" ng-mouseleave="hidesub(1)" style="position:relative;">
+                <a href="#/category/6">Accesories</a>
+                <div class="megamenu megamenu2" ng-include src="submenuval[1]" ng-show="submenu[1]">
+                </div>
+            </li>
+                <!--<li ng-mouseover="showsub(2)" ng-mouseleave="hidesub(2)">
 <a href="#/lookbook">LOOKBOOK</a>
 <div class="megamenu" ng-include src="submenuval[2]" ng-show="submenu[2]">
 </div>
@@ -36,12 +35,12 @@
                 </li>
 
                 <li ng-mouseover="showsub(6)" ng-mouseleave="hidesub(6)">
-                    <a   href="#/contact">Contact us</a>
+                    <a href="#/contact">Contact us</a>
                     <div class="megamenu" ng-include src="submenuval[6]" ng-show="submenu[6]">
                     </div>
                 </li>
             </ul>
-            </div>
-
-
     </div>
+
+
+</div>
