--- a/views/navigation.html
+++ b/views/navigation.html
@@ -6,7 +6,7 @@
         <ul class="nav nav-pills font mainmenu" ng-class="ishome" >
            
             <li>
-                <a href="#/category/31">New In</a>
+                <a href="#/category/31">Just In</a>
                 
             </li>
             <!--li ng-mouseover="showsub(5)" ng-mouseleave="hidesub(5)" style="position:relative;">
@@ -38,7 +38,7 @@
             </li>
 
             <li ng-mouseover="showsub(6)" ng-mouseleave="hidesub(6)">
-                <a   href="#/contact">Contact us</a>
+                <a   href="#/contact">#asklyla</a>
                 <div class="megamenu" ng-include src="submenuval[6]" ng-show="submenu[6]">
                 </div>
             </li>
